# old_code

learning/: Test.sql
learning/Game/snake_game/: Makefile  main.cpp  snake  snake.cpp  snake.h
learning/Interface/: a.out  equal.c  getpass.c  makefile  nowtime.c
learning/Interface/Algo_search_int/: a.out  binary_search.c  hash_search.c  print.c  search.h  test_binarySearch.c  test_hashSearch.c  test_search.c
learning/Interface/Algo_sort_int/: a.out  bubble_sort.c  count_sort.c  heap_sort.c  insert_sort.c  main.c  merge_sort.c  print.c  qsort.c  quick_sort.c  select_sort.c  shell_sort.c  sort.h  test_performance.c  test_sort.c
learning/Interface/Mysql/: Makefile  delete  delete.c  insert  insert.c  query  query.c  query2  query2.c  query3  query3.c  test  test.c  update  update.c
learning/Interface/c_str/: change_string.c  str_divide.c  str_erase.c
learning/Interface/cmd/: lsl.c
learning/Interface/ds_Array/: a.out  array.c  array.h  max1_max2_arr.c  test_arr.c
learning/Interface/ds_BinarySearchTree/: a.out  bst.c  bst.h  test_tree.c
learning/c/: 2DArrayReverse.c  BinarySearch.c  add_2.c  bubble_sort.c  char.c  copy_file.c  count_file_char.c  enum.c  factorial.c  fahr.c  file.c  isOdd.c  line.c  max_in_arry.c  my_strcpy.c  my_strlen.c  new.txt  oddOrEven.c  p_function.c  person.c  point.c  reverse_array.c  search_in_array.c  string_sort.c  student.c
learning/c++/2_Class/Student/: CMakeLists.txt
learning/c++/2_Class/Student/include/: student.hpp
learning/c++/2_Class/Student/src/: student.cc  testStudent.cc
learning/c++/2_Class/v2/: CMakeLists.txt
(+1003 files in other folders)
